# Renderer

./: CMakeLists.txt  display.h  main.cpp  readme.md  vector.h
src/: array.h  display.cpp  display.h  main.cpp  mesh.cpp  mesh.h  triangle.h  vector.cpp  vector.h
